<resources>

    <string name="app_name">大业堂</string>
    <string name="login_login">登 陆</string>
    <string name="login_psw">密 码</string>
    <string name="login_username">账号</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="group">通讯录</string>
    <string name="msg">消息</string>
    <string name="announce">公告</string>
    <string name="setting">设置</string>
    <string name="activity_not_found" msgid="3571057450431950427">"您的手机上未安装应用程序。"</string>
    <string name="data_error">数据异常</string>
    <string name="logo">大业堂</string>
    <string name="back">返回</string>
    <string name="login_success">登陆成功!</string>
    <string name="login_fail">登陆失败!请检验用户名和密码是否正确!</string>
    <string name="login_loading">登陆中&#8230;</string>
    <string name="logout_loading">登出中&#8230;</string>
    <string name="progress">数据处理中&#8230;</string>
    <string name="data_loading">数据加载中&#8230;</string>
    <string name="data_load_fail">数据获得失败!</string>
    <string name="male">男</string>
    <string name="remale">女</string>
    <string name="failed_msg">网络不给力啊,点我再去试试~</string>
    <string name="failed_msg1">网络不给力啊,初始化数据都失败啦!点我再去试试~</string>
    <string name="image">[图片]</string>
    <string name="vedio">[语音]</string>
    <string name="first_load">初始化数据中&#8230;</string>
    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">释放立即刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">刷新中&#8230;</string>
    <string name="pull_to_refresh_tap_label">点击刷新&#8230;</string>
    <string name="eidt_pwd">修改密码</string>
    <string name="eidt_old_pwd">旧密码</string>
    <string name="eidt_new_pwd">新密码</string>
    <string name="eidt_confirm_pwd">确认密码</string>
    <string name="tv_group_members">参与人员（%1$s人）</string>
    
	<item type="id" name="tag_first"></item>
	<item type="id" name="tag_second"></item>

</resources>