<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eidt_old_pwd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eidt_old_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:background="@drawable/text_bg"
            android:hint="@string/eidt_old_pwd"
            android:padding="5dip"
            android:password="true"
            android:singleLine="true"
            android:textSize="20sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eidt_new_pwd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eidt_new_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:background="@drawable/text_bg"
            android:hint="@string/eidt_new_pwd"
            android:padding="5dip"
            android:password="true"
            android:singleLine="true"
            android:textSize="20sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eidt_confirm_pwd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eidt_confirm_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:background="@drawable/text_bg"
            android:hint="@string/eidt_confirm_pwd"
            android:padding="5dip"
            android:password="true"
            android:singleLine="true"
            android:textSize="20sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="提交"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="重置"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>