<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titleFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_back"
            android:onClick="chat_back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/layout_title"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_camera"
            android:textSize="14sp"
            android:visibility="gone" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:background="@drawable/login_bg" >

        <FrameLayout
            android:id="@+id/contentFrame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/layout_new_event"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:background="@color/gray"
            android:gravity="center">

            <ImageView
                android:id="@+id/new_event_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/new_event_del" 
                android:visibility="gone"/>

            <TextView
                android:id="@+id/new_event_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="数据获取中..." />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/funcList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/footer"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/msgButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_weight="1.0"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/msgButtonImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:background="@drawable/msg_footer_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msgButtonImg"
                android:text="@string/msg"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/groupButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_weight="1.0"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/groupButtonImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:background="@drawable/group_footer_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/groupButtonImg"
                android:text="@string/group"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/announceButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_weight="1.0"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/announceButtonImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:background="@drawable/announce_footer_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/announceButtonImg"
                android:text="@string/announce"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dip"
            android:layout_weight="1.0"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/settingButtonImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:background="@drawable/setting_footer_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingButtonImg"
                android:text="@string/setting"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>